# grouped_mm_bf16

./: .gitignore  README.md  pyproject.toml
bench/: _dyn_loop_test.py  bench_2d3d.py
grouped_mm_bf16/: __init__.py  api.py  kernels.py
grouped_mm_bf16/compat/: dlfcn.h
tests/: conftest.py  test_grouped_mm.py
