[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grouped-mm-bf16"
version = "0.1.6"
description = "Triton GPU-only grouped_mm (BF16) matching PyTorch grouped_mm semantics."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
# NOTE: we intentionally do not declare `torch` as a hard dependency because
# installing it via PyPI is platform/accelerator-specific (CUDA/HIP/CPU) and can
# cause pip to pull an incompatible build. Install PyTorch first, then this pkg.
dependencies = []
keywords = ["triton", "pytorch", "gpu", "matmul", "grouped-mm", "bf16", "hip", "rocm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
torch = ["torch"]
triton = [
  "triton; platform_system != 'Windows'",
  "triton-windows; platform_system == 'Windows'",
]
all = [
  "torch",
  "triton; platform_system != 'Windows'",
  "triton-windows; platform_system == 'Windows'",
]

[project.urls]
Repository = "https://github.com/lostmsu/grouped_mm_bf16"
Issues = "https://github.com/lostmsu/grouped_mm_bf16/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
grouped_mm_bf16 = ["compat/*.h"]
